[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurcam"
version = "0.1.0"
description = "Neural Clustering Additive Model (NeurCAM) - An interpretable clustering approach using neural networks"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["machine learning", "clustering", "neural networks", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "pandas",
    "torch>=2.0.0",
    "scikit-learn",
    "scipy",
    "tqdm",
    "entmax",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "matplotlib",
    "plotly",
    "ipywidgets",
    "seaborn",
    "nbdev",
    "black",
    "kaleido",
]
wrds = [
    "wrds",
]

[project.urls]
Homepage = "https://github.com/alexwolson/NeurCAM"
Repository = "https://github.com/alexwolson/NeurCAM"
Documentation = "https://arxiv.org/abs/2408.13361"

[tool.hatch.build.targets.wheel]
packages = ["neurcam"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hatch
  | \.venv
  | _build
  | build
  | dist
)/
'''
